# FFmpeg-batch-proccessing

./: .gitignore  Cargo.toml  README.md  config.json  ffmpeg.txt
.github/workflows/: release.yml
src/: ffmpeg_batch_encoder.rs  json_structs.rs  main.rs
