[package]
name = "ffmpeg_batch_proccessing"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-sidecar = "1.1.0"
indicatif = "0.17.8"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"